--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-fastapi = "*"
+psycopg2 = "*"
+alembic = "*"
+fastapi = {extras = ["standard"], version = "*"}
+sqlalchemy = "*"
 
 [dev-packages]
 
